# ble_gamepad

./: CMakeLists.txt  ble_gamepad.c  ble_gamepad.gatt  btstack_config.h
src/: CMakeLists.txt
src/bt_stack_setup_lib/: CMakeLists.txt  bt_stack_setup_lib.c  bt_stack_setup_lib.h
src/gamepad_advertisement_lib/: CMakeLists.txt  gamepad_advertisement_lib.c  gamepad_advertisement_lib.h
src/gamepad_battery_lib/: CMakeLists.txt  gamepad_battery_lib.c  gamepad_battery_lib.h
src/gamepad_device_information_lib/: CMakeLists.txt  gamepad_device_information_lib.c  gamepad_device_information_lib.h
src/gamepad_hid_lib/: CMakeLists.txt  gamepad_hid_lib.c  gamepad_hid_lib.h
